fix location spacing

--- a/frontend/src/styles/location.css
+++ b/frontend/src/styles/location.css
@@ -3,7 +3,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 12rem;
     transition: color 0.2s ease-in-out;
 }
 
